# dceffplot

./: .gitignore  CMakeLists.txt  README.md  setup.sh
example/: run.cc  run_bdc1.cc  run_fdc1.cc  run_fdc2.cc  runlist_bdc1.txt  runlist_fdc2.txt
example/neolith/: neolith_map.txt  run.cc  runlist.txt
sources/: CMakeLists.txt  TDCEffPlot.cc  TDCEffPlot.hh  TDCEffPlot_BDC.cc  TDCEffPlot_BDC.hh  TDCEffPlot_FDC.cc  TDCEffPlot_FDC.hh  TDCEffPlot_NEOLITHs.cc  TDCEffPlot_NEOLITHs.hh
